LU-7050 llog: record the minimum record size

Remember the minimum record size in llog header, so in
llog_skip_over, it can skip the records properly. In current
implementation, it will use LLOG_MIN_REC_SIZE, only 24 bytes,
which too less for update records(usually more than 1000 bytes),
and cause update recovery reading a lot useless update records
from other MDTs.

The minimum record size will be recorded in llh_size, which is
only used by fixed size record llog now, and also add another
flag LLOG_F_IS_FIXSIZE to indicate the fix size record llog.

Signed-off-by: wang di <di.wang@intel.com>
Change-Id: Ia62684d1fb744e3aca74107f22683b2ee63a2d16
Reviewed-on: http://review.whamcloud.com/16103
Tested-by: Jenkins
Reviewed-by: Mike Pershin <mike.pershin@intel.com>
Reviewed-by: James Simmons <uja.ornl@yahoo.com>
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>