lustre/include/lustre/lustre_idl.h
@@ -3308,7 +3308,12 @@ enum llog_flag {
 	LLOG_F_IS_CAT		= 0x2,
 	LLOG_F_IS_PLAIN		= 0x4,
 	LLOG_F_EXT_JOBID	= 0x8,
+	LLOG_F_IS_FIXSIZE	= 0x10,
 
+	/* Note: Flags covered by LLOG_F_EXT_MASK will be inherited from
+	 * catlog to plain log, so do not add LLOG_F_IS_FIXSIZE here,
+	 * because the catlog record is usually fixed size, but its plain
+	 * log record can be variable */
 	LLOG_F_EXT_MASK = LLOG_F_EXT_JOBID,
 };
 
